Docs: allow dot component to only show result

--- a/docs/docs/main/create-new-template/dynamic-files.mdx
+++ b/docs/docs/main/create-new-template/dynamic-files.mdx
@@ -754,7 +754,7 @@ To explore all the available functions, check out the
 tps react-component nav
 ```
 
-<Dot tps={{name: "nav", packages: ['default']}} lang="js">
+<Dot tps={{name: "nav", packages: ['default']}} lang="js" displayTemplate={false}>
 
 ```text
 import React from react;
